# dynaflare

./: Cargo.toml  README.md  dynaflare.service
src/: configuration.rs  constants.rs  main.rs  types.rs
src/utils/: duration_human.rs  logging.rs  mod.rs
