[package]
name = "dynaflare"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Simple DDNS client for Cloudflare"

[dependencies]
anyhow = "1.0.93"
duration-human = "0.1.10"
fern = { version = "0.7.0", features = ["colored"] }
figment = { version = "0.10.19", features = ["toml"] }
log = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
ureq = { version = "2.10.1", features = ["tls", "native-certs", "json", "charset"], default-features = false }
