[package]
name = "dynaflare"
version = "1.0.1"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Edgar Montiel Cruz <edgar@yzen.pro>"]
description = "Simple DDNS client for Cloudflare"
repository = "https://github.com/Yzen90/dynaflare"
keywords = ["ddns", "cloudflare"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.94"
duration-human = "0.1.10"
fern = { version = "0.7.0", features = ["colored"] }
figment = { version = "0.10.19", features = ["toml"] }
log = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
ureq = { version = "2.12.1", features = [
  "tls",
  "native-certs",
  "json",
  "charset",
], default-features = false }
